# cisa-kev-daily-pipeline

./: .gitignore  README.md  kev_nvd.ipynb  kev_pipeline_analysis.ipynb  pyproject.toml  requirements.txt
.githooks/: pre-commit
scripts/: run_kev_pipeline.py  strip_notebook_output.py
src/kev_pipeline/: __init__.py  cli.py  common.py  config.py  env.py  github_advisories.py  kev.py  nvd.py  pipeline.py
tests/: support.py  test_config.py  test_github_advisories.py  test_kev.py  test_notebook_safety.py  test_nvd.py  test_pipeline.py  test_pipeline_artifacts.py  test_run_pipeline.py
