[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kev-pipeline"
version = "0.1.0"
description = "Local KEV threat pipeline with optional NVD and EPSS enrichment."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Gabriela F.C." }
]
dependencies = [
  "matplotlib>=3.8",
  "nbformat>=5.10",
  "pandas>=2.2",
  "plotly>=5.24",
  "requests>=2.32",
]

[project.scripts]
kev-pipeline = "kev_pipeline.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
